--- a/layout_files/DepressionPage.kv
+++ b/layout_files/DepressionPage.kv
@@ -7,13 +7,18 @@
     BoxLayout:
         orientation: 'vertical'
 
-        MDTopAppBar:
-            title: depression_toolbar_title
-            halign: 'left'
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
+        # MDTopAppBar:
+        #     title: depression_toolbar_title
+        #     halign: 'left'
+        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+        #     elevation:8
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title: depression_toolbar_title
+                    on_release: root.chevron_left()
 
         Label:
             text:''
@@ -61,11 +66,16 @@
 <DepressionPage>:
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
-            title: depression_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
-            elevation:8
+        # MDTopAppBar:
+        #     title: depression_toolbar_title
+        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()],["help", lambda x: root.tap_target_start()]]
+        #     elevation:8
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title: depression_toolbar_title
+                    on_release: root.chevron_left()
 
         # BoxLayout:
         #     size_hint_y:0.7
@@ -107,7 +117,7 @@
                 size_hint_x:0.8
                 font_style:'Button'
                 theme_text_color: "Custom"
-                color_icon_root_button: app.theme_cls.accent_color
+                # color_icon_root_button: app.theme_cls.accent_color
                 pos_hint:{'center_x':0.5}
 
                 on_release:
@@ -182,13 +192,18 @@
     score_label:score_label
     BoxLayout:
         orientation: 'vertical'
-        MDTopAppBar:
+        # MDTopAppBar:
+        #     title: depression_toolbar_title
+        #     left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
+        #     right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
+        #     # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
+        #     elevation:8
 
-            title: depression_toolbar_title
-            left_action_items: [["chevron-left", lambda x: root.chevron_left()]]
-            right_action_items: [["dots-vertical", lambda x:app.show_theme_picker()]]
-            # right_action_items: [["dots-vertical", lambda x: app.callback()], ["clock", lambda x: app.callback_2()]]
-            elevation:8
+        ActionBar:
+            ActionView:
+                ActionPrevious:
+                    title: depression_toolbar_title
+                    on_release: root.chevron_left()
 
         Label:
             text: 'Your score is:'
